--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_ULI = mongodb+srv://tygiyash:togrM3YV6kK0O5Z9@sentinel1.3jb2y.mongodb.net/SENTINELDB?retryWrites=true&w=majority&appName=sentinel1
+MONGO_URI=mongodb+srv://tygiyash:togrM3YV6kK0O5Z9@sentinel1.3jb2y.mongodb.net/SENTINELDB?retryWrites=true&w=majority&appName=sentinel1
 
 
 
